# masanOhjelmointikieli

./: .gitignore  CMakeLists.txt  README.md
headers/: ir.h  lexer.h  operations.h  parser.h  symbol.h  types.h
resources/: ast.gdb  code.txt  code2.txt
src/: ir.c  lexer.c  main.c  parser.c  symbol.c
